--- a/Front/package.json
+++ b/Front/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "undefined": "^0.1.0",
     "web-vitals": "^2.1.4"
