--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = "^0.27.1"
+sqlalchemy = "^2.0.28"
+sqlalchemy-utils = "^0.41.1"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
