--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.27.1"
 sqlalchemy = "^2.0.28"
 sqlalchemy-utils = "^0.41.1"
 psycopg2 = "^2.9.9"
+pydantic = "^2.6.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
