--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -11,8 +11,9 @@ fastapi = "^0.110.0"
 uvicorn = "^0.27.1"
 sqlalchemy = "^2.0.28"
 sqlalchemy-utils = "^0.41.1"
-psycopg2 = "^2.9.9"
 pydantic = "^2.6.3"
+asyncpg = "^0.29.0"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
