--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -13,7 +13,7 @@ sqlalchemy = "^2.0.28"
 sqlalchemy-utils = "^0.41.1"
 pydantic = "^2.6.3"
 asyncpg = "^0.29.0"
-psycopg2-binary = "^2.9.9"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
