--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy-utils = "^0.41.1"
 pydantic = "^2.6.3"
 asyncpg = "^0.29.0"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
