--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -16,6 +16,7 @@ asyncpg = "^0.29.0"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
 python-dotenv = "^1.0.1"
 email-validator = "^2.1.1"
+pydantic-extra-types = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
