--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -17,6 +17,7 @@ psycopg = {extras = ["binary"], version = "^3.1.18"}
 python-dotenv = "^1.0.1"
 email-validator = "^2.1.1"
 pydantic-extra-types = "^2.6.0"
+pycountry = "^23.12.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
