--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -9,10 +9,25 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = "^0.27.1"
+sqlalchemy = "^2.0.28"
+sqlalchemy-utils = "^0.41.1"
+pydantic = "^2.6.3"
+asyncpg = "^0.29.0"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
+python-dotenv = "^1.0.1"
+email-validator = "^2.1.1"
+pydantic-extra-types = "^2.6.0"
+pycountry = "^23.12.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
 pre-commit = "^3.6.2"
+
+[tool.ruff.lint.per-file-ignores]
+"database.py" = ["E402", "F401"]
+
+[tool.ruff.lint]
+ignore = ["E712"]
 
 [build-system]
 requires = ["poetry-core"]
