--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.1"
 email-validator = "^2.1.1"
 pydantic-extra-types = "^2.6.0"
 pycountry = "^23.12.11"
+faker = "^24.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
