--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -22,6 +22,7 @@ faker = "^24.4.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.9"
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
