--- a/Front/package.json
+++ b/Front/package.json
@@ -18,7 +18,9 @@
     "react-number-format": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-text-mask": "^5.5.0",
+    "slick-carousel": "^1.8.1",
     "undefined": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
