--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -23,6 +23,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.9"
 httpx = "^0.27.0"
+requests = "^2.32.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
